--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -26,8 +26,12 @@
 #
 # Default: @asap
 #
-#pullRequests.frequency = "0 0 ? * 3" # every thursday on midnight
-pullRequests.frequency = "0 12 1,16 * *" # every 1st and 16th of the month at noon
+pullRequests.frequency = "0 0 ? * MON" # every monday at midnight
+
+# pullRequests.customLabels allows to add custom labels to PRs.
+# This is useful if you want to use the labels for automation (project board for example).
+# Defaults to no labels (no labels are added).
+pullRequests.customLabels = [ "Scala_Steward" ]
 
 # Only these dependencies which match the given patterns are updated.
 #
@@ -74,7 +78,7 @@ updatePullRequests = "always"
 # If set, Scala Steward will use this message template for the commit messages and PR titles.
 # Supported variables: ${artifactName}, ${currentVersion}, ${nextVersion} and ${default}
 # Default: "${default}" which is equivalent to "Update ${artifactName} to ${nextVersion}"
-commits.message = "(Broadbot) Update ${artifactName} from ${currentVersion} to ${nextVersion}"
+commits.message = "CORE-69: Update ${artifactName} from ${currentVersion} to ${nextVersion}"
 
 # If true and when upgrading version in .scalafmt.conf, Scala Steward will perform scalafmt
 # and add a separate commit when format changed. So you don't need reformat manually and can merge PR.
