update for azure gov config

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -188,6 +188,7 @@ admin {
 
 azureServices {
   azureEnabled = ${?AZURE_ENABLED}
+  azureEnvironment = ${?AZURE_ENVIRONMENT} # defaults to AZURE
   allowManagedIdentityUserCreation = ${?AZURE_ALLOW_MANAGED_IDENTITY_USER_CREATION}
   managedAppServicePrincipal {
     clientId = ${?AZURE_MANAGED_APP_CLIENT_ID}
